# cs544final

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  nl_vllm_qwen3.yaml  vllm_qwen25_7b_factorial_full.yaml
cot_factors/: __init__.py  analyze.py  compare.py  config.py  dataset.py  inference.py  inference_vllm.py  metrics.py  prompts.py  run.py
docs/: RESEARCH_NOTES_CoT_STRUCTURE.md
outputs/run_20260414_025248/: meta.json
outputs/run_20260414_025619/: meta.json
outputs/run_20260414_025853/: meta.json
outputs/run_20260414_030030/: meta.json
outputs/run_20260414_030240/: meta.json
outputs/run_20260414_030814/: meta.json
outputs/run_20260414_031409/: meta.json  predictions__n_high__l_concise__r_student__p_deductive.jsonl  predictions__n_high__l_detailed__r_student__p_deductive.jsonl  predictions__n_low__l_concise__r_student__p_deductive.jsonl  predictions__n_low__l_detailed__r_student__p_deductive.jsonl  predictions__n_mid__l_concise__r_student__p_deductive.jsonl  predictions__n_mid__l_detailed__r_student__p_deductive.jsonl  summary.json
outputs/run_20260414_031933/: meta.json  predictions__n_high__l_concise__r_student__p_deductive.jsonl  predictions__n_high__l_detailed__r_student__p_deductive.jsonl  predictions__n_low__l_concise__r_student__p_deductive.jsonl  predictions__n_low__l_detailed__r_student__p_deductive.jsonl  summary.json  (+2 more)
scripts/: activate_cot_factors_vllm.sh  check_gpu_env.sh  monitor_run.sh  run_factorial_qwen25_vllm_full.sh  run_nl_vllm_qwen3.sh
tests/: test_metrics.py
(+27 files in other folders)
